--- a/package.json
+++ b/package.json
@@ -20,25 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:coverage": "react-scripts test --coverage --watchAll=false",
-    "test:ci": "CI=true react-scripts test --coverage --watchAll=false",
-    "eject": "react-scripts eject",
-    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint src --ext .js,.jsx,.ts,.tsx --fix",
-    "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,json,md}",
-    "format:check": "prettier --check src/**/*.{js,jsx,ts,tsx,css,json,md}",
-    "cy:open": "cypress open",
-    "cy:run": "cypress run",
-    "cy:run:headless": "cypress run --headless",
-    "analyze": "npm run build && npx serve -s build",
-    "analyze:bundle": "npm run build && npx webpack-bundle-analyzer build/static/js/*.js",
-    "analyze:source-map": "npm run build && npx source-map-explorer 'build/static/js/*.js'",
-    "security:audit": "npm audit",
-    "security:audit:ci": "npx npm-audit-ci --moderate",
-    "security:deps": "npx dependency-check package.json",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "prepare": "husky"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -58,32 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@storybook/addon-a11y": "^8.6.14",
-    "@storybook/addon-docs": "^8.6.14",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/react": "^8.6.14",
-    "@testing-library/jest-dom": "^6.7.0",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^24.3.0",
-    "@types/react": "^19.1.10",
-    "@types/react-dom": "^19.1.7",
-    "@typescript-eslint/eslint-plugin": "^8.39.1",
-    "@typescript-eslint/parser": "^8.39.1",
-    "cypress": "^14.5.4",
-    "dependency-check": "^4.1.0",
-    "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-cypress": "^2.15.1",
-    "husky": "^9.1.7",
-    "jest-environment-jsdom": "^30.0.5",
-    "lint-staged": "^16.1.5",
-    "npm-audit-ci": "^1.2.1",
-    "prettier": "^3.6.2",
-    "source-map-explorer": "^2.5.3",
-    "storybook": "^8.6.14",
-    "typescript": "^5.9.2",
-    "web-vitals": "^5.1.0",
-    "webpack-bundle-analyzer": "^4.10.2"
-  }
+  "devDependencies": {}
 }
